--- a/src/globals.css
+++ b/src/globals.css
@@ -397,3 +397,18 @@
     @apply font-semibold text-light-1 hover:underline;
   }
 }
+@keyframes flash {
+  0% {
+    opacity: 1;
+  }
+  50% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+.flashing {
+  animation: flash 1.0s infinite;
+}
